[package]
name = "mirage"
version = "1.3.0"
edition = "2021"

[dependencies]
fuser = "0.12"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8.5"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
argon2 = "0.5"
rpassword = "7.0"
image = "0.24"
img-parts = "0.3"
flate2 = "1.0"
hex = "0.4.3"
rand_chacha = "0.3"
ctrlc = "3.5.1"

[profile.dev]
strip = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
