[package]
name = "mirage"
version = "1.5.0"
edition = "2021"

[features]
default = ["webdav"]
webdav = []
fuse = ["dep:fuser"]

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.16", optional = true }
[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8.5"
async-trait = "0.1"
chacha20poly1305 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
argon2 = "0.5"
rpassword = "7.0"
image = "0.24"
img-parts = "0.3"
flate2 = "1.0"
hex = "0.4.3"
rand_chacha = "0.3"
ctrlc = "3.5.1"
dav-server = "0.7.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util"] }
headers = "0.3"
hyper = "1.8.1"
bytes = "1.11.1"
futures = "0.3.31"
srapi-rs = { path = "src/srapi-rs" }
hyper-util = { version = "0.1.19", features = ["tokio", "server", "server-auto", "http1"] }
http-body-util = "0.1.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3.10"
filetime = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 0
strip = true
panic = "abort"
incremental = true
lto = false
codegen-units = 256
